--- a/styles/scss/base/_resets.scss
+++ b/styles/scss/base/_resets.scss
@@ -4,6 +4,18 @@
 	box-sizing: border-box;
 }
 
+/*
+* Hide horizontal overflow for mobile
+* Overflow caused by animation
+*/
+html,body{
+	overflow-x:hidden;
+
+	@include tablet-query{
+		overflow-x:initial;
+	}
+}
+
 body{
 	font-family: $ff-rubik;
 	background-color: $c-very-dark-blue;
@@ -33,7 +45,7 @@ body{
 		}
 		50%{
 			opacity:1;
-			transform:translate(50%,50%) scale(20);
+			transform:translate(50%,50%) scale(15);
 		}
 		100%{
 			opacity:0;
